--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\santi\\OneDrive\\Documents\\NetBeansProjects\\OperacionesDBMedicos\\lib\\mysql-connector-java-8.0.11.jar
+file.reference.mysql-connector-java-8.0.11.jar=lib\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
