--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>CrearCompra</servlet-name>
         <servlet-class>Servlet.CrearCompra</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Facturacion</servlet-name>
+        <servlet-class>Servlet.Facturacion</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>CrearUsuario</servlet-name>
         <url-pattern>/cliente/registrar</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>CrearCompra</servlet-name>
         <url-pattern>/administracion/CrearCompra</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Facturacion</servlet-name>
+        <url-pattern>/administracion/Facturacion</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
